...
                    </View>
                  </>
                );
              }
            })()}
            {isAdvancedOptionsEnabled && selectedWalletType === ButtonSelected.ONCHAIN && !isLoading && (
              <BlueButtonLink style={styles.import} testID="ProvideEntropyLink" title={entropyButtonText} onPress={navigateToEntropy} />
            )}
          </View>
        </KeyboardAvoidingView>
      </View>
      <View style={styles.buttonContainer}>
        <View style={styles.createButton}>
          <BlueButton testID="Create" title={loc.wallets.add_create} onPress={createWallet} isLoading={isLoading} />
        </View>
        {!isLoading && (
          <BlueButtonLink
            testID="ImportWallet"
            style={styles.import}
            title={loc.wallets.add_import_wallet}
...
