...
const styles = StyleSheet.create({
  root: {
    flex: 1,
  },
});

const Settings = () => {
  const { navigate } = useNavigation();
  // By simply having it here, it'll re-render the UI if language is changed
  // eslint-disable-next-line @typescript-eslint/no-unused-vars
  const { wallets, language, ldsDEV } = useContext(BlueStorageContext);
  const { walletID } = useWalletContext();
  const lndWallet = getLightningWallet(wallets);
  const multiDeviceWallet = wallets.find(wallet => wallet.type === MultisigHDWallet.type);
  const chfTaprootWallet = wallets.find(
    wallet => wallet.type === TaprootLdsWallet.type && wallet.getCurrencyName() === TaprootLdsWalletType.CHF,
  );

  const navigateToWalletDetails = id => {
    navigate('WalletDetails', {
      walletID: id,
    });
  };

  return (
    <>
...
