...
      const tabStyle = isActive ? stylesHook.activeTab : stylesHook.inactiveTab;
      const textStyle = isActive ? stylesHook.activeText : stylesHook.inactiveTab;

      return (
        <View key={tab.key} onPress={() => changeToTab(tab.key)} style={[styles.tab, tabStyle]}>
          <Text
            testID={tab.value === TABS.EXTERNAL ? 'AddressTabReceive' : 'AddressTabChange'}
            onPress={() => changeToTab(tab.key)}
            style={textStyle}
          >
            {tab.name}
          </Text>
        </View>
...
